--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,6 +166,7 @@
     border-bottom: 1px solid #eee;
     padding-bottom: 80px;
     text-align: center;
+    background-color:#55acee;
   }
   
   .message {
